--- a/src/App.css
+++ b/src/App.css
@@ -238,6 +238,12 @@ input:checked + .slider:before {
   gap: 30px;
   flex-wrap: wrap;
   justify-content: center;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 25px;
+  padding-left: 100px;
+  padding-right: 100px;
+  border-radius: 50px;
+  border: 3px solid rgba(255, 255, 255, 0.1);
 }
 
 .bet-section {
